# cli-tooter

./: .gitignore  README.md  pyproject.toml  toot.py
